stable version that starts in 2019, no ribbon yet

--- a/OutlookTfsConnector/app.config
+++ b/OutlookTfsConnector/app.config
@@ -1,11 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="TMP_ATTACH_FOLDER" value="C:\Temp\OutlookTfsConfig\tmp\"/>
-    <add key ="TFS_USERNAME" value="user@domain.com"/>
-    <add key ="TFS_USERTOKEN" value="user personal token id"/>
-    <add key ="TFS_PROJECT" value="TFS Project Name"/>
-    <add key="TFS_URL" value="https://tfsonlineproject.visualstudio.com"/>
+    <add key="TMP_ATTACH_FOLDER" value="C:\Temp\OutlookTfsConfig\tmp\" />
+    <add key="TFS_USERNAME" value="user@domain.com" />
+    <add key="TFS_USERTOKEN" value="user personal token id" />
+    <add key="TFS_PROJECT" value="TFS Project Name" />
+    <add key="TFS_URL" value="https://tfsonlineproject.visualstudio.com" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -15,4 +16,19 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+  </startup>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
