--- a/OutlookTfsConnectorRegistrationTool/OutlookTfsConnectorRegistrationTool.csproj
+++ b/OutlookTfsConnectorRegistrationTool/OutlookTfsConnectorRegistrationTool.csproj
@@ -32,6 +32,12 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>false</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>selfsign.snk</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -75,6 +81,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="selfsign.snk" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
