--- a/OutlookTfsConnectorRegistrationTool/OutlookTfsConnectorRegistrationTool.csproj
+++ b/OutlookTfsConnectorRegistrationTool/OutlookTfsConnectorRegistrationTool.csproj
@@ -36,7 +36,8 @@
     <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>selfsign.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>
+    </AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -81,7 +82,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="selfsign.snk" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
