--- a/OutlookTfsConnectorTests/OutlookTfsConnectorTests.csproj
+++ b/OutlookTfsConnectorTests/OutlookTfsConnectorTests.csproj
@@ -49,7 +49,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="StringExtensionsTest.cs" />
+    <Compile Include="MiscExtensionsTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
