--- a/OutlookTfsConnector/packages.config
+++ b/OutlookTfsConnector/packages.config
@@ -3,12 +3,23 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.6.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Logging" version="5.6.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Tokens" version="5.6.0" targetFramework="net472" />
-  <package id="Microsoft.TeamFoundation.DistributedTask.Common.Contracts" version="16.170.0" targetFramework="net472" />
-  <package id="Microsoft.TeamFoundationServer.Client" version="16.170.0" targetFramework="net472" />
-  <package id="Microsoft.VisualStudio.Services.Client" version="16.170.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Abstractions" version="6.30.1" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.30.1" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Logging" version="6.30.1" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Tokens" version="6.30.1" targetFramework="net472" />
+  <package id="Microsoft.TeamFoundation.DistributedTask.Common.Contracts" version="16.205.1" targetFramework="net472" />
+  <package id="Microsoft.TeamFoundationServer.Client" version="16.205.1" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Services.Client" version="16.205.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="5.6.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="6.30.1" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net472" />
+  <package id="System.Text.Encoding" version="4.3.0" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="4.7.2" targetFramework="net472" />
+  <package id="System.Text.Json" version="4.7.2" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
 </packages>
