--- a/OutlookTfsConnector/OutlookTfsConnector.csproj
+++ b/OutlookTfsConnector/OutlookTfsConnector.csproj
@@ -450,6 +450,7 @@
     </Compile>
     <EmbeddedResource Include="Forms\OutlookTfsConnectorRibbon.resx">
       <DependentUpon>OutlookTfsConnectorRibbon.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
