--- a/OutlookTfsConnector/OutlookTfsConnector.csproj
+++ b/OutlookTfsConnector/OutlookTfsConnector.csproj
@@ -496,6 +496,9 @@
     <Compile Include="Forms\TfsWorkItemUserForm.Designer.cs">
       <DependentUpon>TfsWorkItemUserForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Ribbon.cs">
+      <XmlRibbon>true</XmlRibbon>
+    </Compile>
     <Compile Include="ThisAddIn.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -510,6 +513,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\btn_donateCC_LG[1].gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Ribbon.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\TfsImage.png" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
